# AutoDef

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.aw/: check.sh
.github/workflows/: ci.yml  release.yml
examples/: chain.py  class_support.py  image_description.py  impl.py  impl_error_correction.py  impl_with_llm.py  llm.py  path_example.py  shim_example.py
src/autodef/: __init__.py  config.py
src/autodef/decorators/: __init__.py  impl.py  llm.py  shim.py  task.py
src/autodef/model/: prompt.py
src/autodef/services/: codex.py  context_builder.py  provider.py  text_generator.py
tests/: test_codex.py  test_decorators.py  test_image_support.py  test_path_support.py  test_text_generator.py
