[project]
name = "autodef"
version = "0.1.0"
description = "Use LLMs for functions"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Toby", email = "toby@example.com" }
]
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autodef"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
